style.css
/* Arrow intro animation */

.arrowDiv, .slideUp-animation {
    animation: slideUp 1.8s;
}

@keyframes slideUp {
    0% {
        transform: translateY(300%);
        opacity: 0;
    }
    70% {
        transform: translateY(300%);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 100%;
    }
}

/* Bouncing arrow animation */

.bouncingArrow {
    margin-bottom: 8vh;
    max-width:6vw; 
    color:black;
    animation: bounce 0.8s;
    animation-direction: alternate;
    animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
    animation-iteration-count: infinite;
    animation-delay: 2s;
    transform: scale(1);
    transition-duration: 0.3s;
}
  
@keyframes bounce {
    from {
        transform: translate3d(0, 0, 0);
    }
    to {
        transform: translate3d(0, 45%, 0);
    }
}

.bouncingArrow:hover {
    transform: scale(1.2);
}

.bodyDiv, .Paul, .Bauer, .aboutDiv, .secondDiv, .contactDiv, .Btn {
    transition: background-color 0.7s, color 0.3s;
}

.bouncingArrow, .lightbulb {
    transition: background-color 0.7s, color 0.7s;
}

.scrollBox, #firstPart, #secondPart {
    transition: background-color 0.7s, color 0.7s;
}

.isBeige {
    color: #ddb892;
}

.isBlack {
    color:black;
}

.bgBlack {
    background-color: black;
}

.bgBeige {
    background-color: #ddb892;
}

#lightDiv {
    animation: dropDown 1.8s;
}

@keyframes dropDown {
    0% {
        transform: translateY(-300%);
    }
    70% {
        transform: translateY(-300%);
    }
    100% {
        transform: translateY(0);
    }
}

.contactTxt {
    color: black;
    font-family: 'Comfortaa', sans-serif;
    transition: all 0.5s ease-in-out;
    overflow: hidden;
    max-height: 0;
    display: none;
}

.contactTxt.show {
    max-height: 100%;
    display: contents;
}

.contactDiv {
    padding: 3vw;
    margin-left: 0;
    margin-right: 0;
    color:black;
}

.secondTxt {
    color: black;
    font-family: 'Comfortaa', sans-serif;
    transition: all 0.5s ease-in-out;
    overflow: hidden;
    max-height: 0;
    display: none;
}

.secondTxt.show {
    max-height: 100%;
    display: contents;
}

.secondDiv{
    padding: 3vw;
    margin-left: 0;
    margin-right: 0;
    color:black;
}

.contactDiv:hover{
    animation: changeColor 0.5s;
    background-color: white;   
}

.secondDiv:hover{
    animation: changeColor 0.5s;
    background-color: white;
}

.aboutDiv:hover {
    animation: changeColor 0.5s;
    background-color: white;
}

.aboutTxt {
    color: black;
    font-family: 'Comfortaa', sans-serif;
    transition: all 0.5s ease-in-out;
    overflow: hidden;
    max-height: 0;
    display: none;
}

.aboutTxt.show{
    max-height: 100%;
    display: contents;
}

.aboutDiv {
    padding: 3vw;
    margin-left: 0;
    margin-right: 0;
    color: black;
}

.Btn {
    background-color: inherit;
    border: none;
    font-family: 'Comfortaa', sans-serif;
    font-weight: bolder; 
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    user-select: none;
}

.Btn:hover {
    cursor: pointer;
}

.changePtr:hover{
    cursor: pointer;
}

@keyframes changeColor {
    0% {
        background-color: inherit;
    }
    100% {
        background-color: white;
    }
}

.lightbulb {
    max-width: 6vmin;
    animation: wobble 3s linear infinite 2.2s;
    transform: scale(1);
}

@keyframes wobble {
    0%, 7% {
        transform: rotateZ(0);
      }
      15% {
        transform: rotateZ(15deg);
      }
      20% {
        transform: rotateZ(-10deg);
      }
      25% {
        transform: scale(1.1);
        transform: rotateZ(10deg);
      }
      30% {
        transform: rotateZ(-6deg);
      }
      35% {
        transform: rotateZ(4deg);
      }
      40%, 100% {
        transform: rotateZ(0);
      }
}

.Paul, .Bauer {
    font-size: 25vmin;
    font-family: 'Comfortaa', sans-serif;
    font-weight: bolder;
}

#paulDiv {
    animation-name: rubberBandFromLeft;
    animation-duration: 1.5s;
    animation-timing-function: cubic-bezier(0.64, 0.18, 0.54, 1.57);
}

#bauerDiv {
    animation-name: rubberBandFromRight;
    animation-duration: 1.5s;
    animation-timing-function: cubic-bezier(0.64, 0.18, 0.54, 1.57);
}

/* 'Paul Bauer' text animation */

@keyframes rubberBandFromRight {
    0% {
        transform: translateX(150%);
        opacity: 0;
    }
    50% {
        opacity: 70%;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes rubberBandFromLeft {
    0%{
        transform: translateX(-150%);
        opacity: 0;
    }
    50% {
        opacity: 70%;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

/* If there is no lightbulb, then margin = 17vh; */

.colBtn {
    text-decoration: none;
    color: inherit;
}

/* On-scroll styling and animations*/

.come-in {
  transform: translateX(150%);
  animation: come-in 0.8s ease forwards;
}
.come-in:nth-child(odd) {
  animation-duration: 0.6s;
}
.already-visible {
  transform: translateX(0);
  animation: none;
}

@keyframes come-in {
  to { transform: translateX(0); }
}
 
/* End on-scroll styling and animations */

.scrollBox {
    position: relative;
    overflow: hidden;
    z-index: 1;
    border-radius: 4vw;
    animation: waitGrowX 2s ease;
    max-height: 6vmin;
  }
  
  .m-scroll {
    overflow: hidden;
    white-space: nowrap;
    animation: scrollText 20s infinite linear 2s;
    margin: 0;
    padding: 0;
    font-size: 0;
    display: inline-block;
  }
  
#firstPart, #secondPart {
    font-weight: bold;
}

.scrollTxt {
    font-size: 4.4vmin;
    display: inline-block;
    padding: 0;
    font-family: 'Comfortaa', sans-serif;
    margin-left: 1vw;
  }

@keyframes scrollText {
    from {
        transform: translateX(0%);
    }
    to {
        transform: translateX(-50%);
    }
}

@keyframes waitGrowX{
    0% {
        opacity: 0;
        transform: scaleY(0);
    }
    70% {
        transform: scaleY(0);
        opacity: 0;
    }
    100% {
        transform: scaleY(100%);
        opacity: 1;
    }
}

